# murdle-solver

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.toml
murdle_solver/: __main__.py  cli.py  config_loader.py  rule_lex.py  rule_yacc.py  rules.py  solutions.py  solver.py
tests/: rule_lex_test.py  rule_yacc_test.py  solutions_test.py  solver_test.py
